# data-modeling-assistant-demo

./: .env.example  README.md  claude_desktop_config_example.json  ingest.py  pyneoinstance_config.yaml  pyproject.toml  validation_config.yaml
.cursor/: mcp.json
data/: README.md  accounts.csv  cases.csv  contacts.csv  leads.csv  opps.csv
data_model/: README.md  data_model.json  data_model.mermaid
prompt/: code_gen.txt  create_new_data_model.txt  data_description.txt  use_cases.txt  yaml_gen.txt
transcripts/: data_model_generation.txt  ingest_script_generation.txt  use_case_validation.txt
